# Fintrack_new

./: Cargo.toml  README.md  architecture.mmd  bitcoin.conf  btc-checker-init-args.did  canister_ids.json  ckbtc-index-init-args.did  ckbtc-ledger-init-args.did  ckbtc-minter-init-args.did  cketh-index-init-args.did  cketh-ledger-init-args.did  cketh-minter-init-args.did  dfx.json  download.cketh.sh  package-lock.json  package.json  usrflow.mmd
bitcoin_data/regtest/: bitcoind.pid
bitcoin_data/regtest/blocks/index/: 000005.ldb  000008.ldb  000011.ldb  000018.ldb  000020.ldb  000033.ldb  MANIFEST-000007  MANIFEST-000010  MANIFEST-000013  MANIFEST-000019  MANIFEST-000030  MANIFEST-000036  MANIFEST-000038
bitcoin_data/regtest/chainstate/: 000005.ldb  000008.ldb  000010.ldb  000011.ldb  000018.ldb  000020.ldb  000033.ldb  MANIFEST-000007  MANIFEST-000010  MANIFEST-000013  MANIFEST-000019  MANIFEST-000030  MANIFEST-000036  MANIFEST-000038
bitcoin_data/regtest/indexes/txindex/: 000005.ldb  000008.ldb  000011.ldb  000018.ldb  000020.ldb  000031.ldb  000033.ldb  MANIFEST-000007  MANIFEST-000010  MANIFEST-000013  MANIFEST-000019  MANIFEST-000032  MANIFEST-000037  MANIFEST-000039
bitcoin_data/regtest/wallets/testwallet/: wallet.dat-journal
fintrack_backend/: Cargo.toml  fintrack_backend.did
fintrack_backend/src/: lib.rs
fintrack_backend/src/services/: address.rs  btc.rs  btctransfer.rs  budget.rs  eth.rs  ethtransfer.rs  evm_rpc_canister.rs  goals.rs  kongswap.rs  mod.rs  rates.rs  timers.rs  transactions.rs  transfer.rs  uniswap.rs  utils.rs
fintrack_frontend/: next.config.ts  package-lock.json  package.json
fintrack_frontend/src/app/: globals.css
fintrack_frontend/src/app/(with-nav)/: layout.tsx  page.tsx
fintrack_frontend/src/components/: basic-sidebar.tsx  connect-wallet-button.tsx  theme-toggle.tsx
fintrack_frontend/src/contexts/: AuthContext.tsx
fintrack_frontend/src/hooks/: useData.ts
fintrack_frontend/src/lib/: ic.ts  utils.ts
fintrack_frontend/src/services/: backend.ts  ethDeposit.ts
fintrack_frontend/src/utils/: icrc1.ts  uniswap.ts  uniswapv3.ts
scripts/: deploy.ckbtc.sh  download-immutable.sh  download.ckbtc.sh  download.cketh.sh  generate-bindings.sh
(+31 files in other folders)
