[package]
name = "fintrack_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-stable-structures = "0.5"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
num-traits = "0.2"
hex = "0.4"
bitcoin = "0.32.5"
sha3 = "0.10"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
secp256k1 = "0.28"
