[package]
name = "fintrack_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2"
ic-stable-structures = "0.5"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
num-traits = "0.2"
num = "0.4.3"
hex = "0.4"
bitcoin = "0.32.5"
sha3 = "0.10"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
secp256k1 = "0.28"
alloy-consensus = "0.1.3"
alloy-eips = "0.1.3"
alloy-primitives = "0.7.6"
getrandom = { version = "*", default-features = false, features = ["custom"] }
ic-secp256k1 = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-secp256k1" }
ic-sha3 = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-sha3" }
ic-ethereum-types = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-ethereum-types" }